alignment fix

--- a/Home.css
+++ b/Home.css
@@ -35,7 +35,7 @@ body {
 
 .carousel-text {
     position: absolute;
-    top: 30%;
+    top: 28%;
     left: 28%;
     right: 28%;
     z-index: 20;
